--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,8 @@ include_directories(include)
 
 # Add the executable
 add_library(aixd 
-            src/ai.cpp 
-            src/rksound.cpp
-            src/aixd.cpp)
+            src/aixd.cpp
+            src/miniaudio.c)
 
 
 # Link libraries
